# Socrates-core-api

./: .gitignore  Dockerfile  E2E_AUTH_TEST_REPORT.md  E2E_AUTH_TEST_SUMMARY.md  E2E_TEST_INDEX.md  E2E_TEST_QUICK_REFERENCE.md  LICENSE  README.md  docker-compose.yml  final_test.py  pyproject.toml  run_api_fresh.py  run_server.py  start_api_9000.py  start_with_jwt.py  test_api.py
.github/workflows/: publish.yml  test-and-build.yml  tests.yml
docs/: LIBRARY_GUIDE.md
src/socrates_api/: __init__.py  __main__.py  database.py  main.py  models.py  models_local.py
src/socrates_api/auth/: dependencies.py  jwt_handler.py  project_access.py
src/socrates_api/middleware/: audit.py  subscription.py
src/socrates_api/models/: __init__.py
src/socrates_api/routers/: __init__.py  analysis.py  analytics.py  auth.py  chat.py  code_generation.py  collaboration.py  commands.py  conflicts.py  database_health.py  events.py  finalization.py  free_session.py  github.py  knowledge.py  knowledge_management.py  learning.py  library_integrations.py  nlu.py  notes.py  progress.py  projects.py  projects_chat.py  security.py  skills.py  sponsorships.py  subscription.py  system.py  websocket.py  workflow.py
src/socrates_api/routes/: __init__.py  analytics.py  code.py  collaboration.py  documents.py  projects.py  sessions.py  workflows.py
src/socrates_api/websocket/: event_bridge.py
tests/: __init__.py
