[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socrates-core-api"
version = "0.5.6"
description = "REST API server for Socrates AI with GitHub-ready project generation, export, and publishing capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Socrates AI Contributors"}
]
keywords = [
    "api",
    "rest",
    "fastapi",
    "socrates",
    "ai",
    "tutoring",
    "github",
    "export",
    "git",
    "ci-cd"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Web Environment",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

dependencies = [
    "socratic-core>=0.1.1",     # Core framework (config, exceptions, events, logging)
    "socratic-security==0.4.0", # Security utilities (prompt injection, path validation)
    "fastapi>=0.100.0",         # REST API framework
    "uvicorn[standard]>=0.23.0",# ASGI server
    "pydantic>=2.0.0",          # Data validation
    "python-dotenv>=1.0.0",     # Environment variables
    "python-multipart>=0.0.5",  # Multipart form data
]

[project.optional-dependencies]
full = [
    # All core libraries already in base dependencies
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "httpx>=0.24.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
socrates-api = "socrates_api.main:run"

[project.urls]
Homepage = "https://github.com/Nireus79/Socrates"
Repository = "https://github.com/Nireus79/Socrates"
"Bug Tracker" = "https://github.com/Nireus79/Socrates/issues"
"Source Code" = "https://github.com/Nireus79/Socrates/tree/main/socrates-api"

[tool.setuptools]
packages = ["socrates_api", "socrates_api.middleware", "socrates_api.routers", "socrates_api.auth", "socrates_api.services", "socrates_api.websocket", "socrates_api.caching"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--timeout=5"
timeout = 5
